# enshittification

./: .gitignore  README.md  auto_test.py  enshit.py  example.json  main.py  pyproject.toml
tests/: test_download_and_play.py
