[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false

[tool.ruff] #https://github.com/astral-sh/ruff/blob/main/docs/configuration.md
line-length = 100

# Ignoring some shit:
ignore = ["E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Common Excludes
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]


[tool.rope] # https://rope.readthedocs.io/en/latest/configuration.html#pyproject-toml
split_imports = true
pull_imports_to_top = true

[tool.poetry]
name = "enshittification"
version = "0.1.0"
description = "Cli tool to provide you links that're new from all your youtube account subscriptions -- allowing you to open them in non-logged in browsers to reduce your chance of having erectile disfunction snake-oils marketed at you"
authors = ["jer, <alphastrata@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.104.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
pytube = "^15.0.0"
termcolor = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
